# FACT

./: .gitignore  Cargo.toml  LICENSE  README.md  fact_stix_export.json
analyzer/: Cargo.toml
analyzer/src/: lib.rs
analyzer/src/amcache/: mod.rs
analyzer/src/correlation/: mod.rs
analyzer/src/evtx/: mod.rs
analyzer/src/ntuser/: mod.rs
analyzer/src/prefetch/: mod.rs
analyzer/src/preprocess/: mod.rs
analyzer/src/registry/: mod.rs
analyzer/src/stix/: mod.rs
analyzer/src/tasks/: mod.rs
analyzer/src/usnjrnl/: mod.rs
cli/: Cargo.toml
cli/src/: main.rs
collector/: Cargo.toml
collector/src/: artifacts.rs  filesystem.rs  lib.rs  mft.rs  privilege.rs  reader.rs
models/: Cargo.toml
models/src/: artifact.rs  error.rs  event.rs  lib.rs  mft.rs  ntfs.rs
parser/: Cargo.toml
parser/src/: amcache.rs  evtx.rs  lib.rs  lnk.rs  mft.rs  ntfs.rs  ntuser.rs  prefetch.rs  registry.rs  system_hive.rs  tasks.rs  usnjrnl.rs  wmi.rs
test/: fact_stix_export.json  final_threat_report.json  test_stix.json
