[package]
name = "analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
models = { path = "../models" }
parser = { path = "../parser" }
anyhow = "1.0"
chrono = "0.4"
tracing = "0.1"
evtx = "0.11.2"
serde_json = "1.0.149"
uuid = { version = "1.8", features = ["v4"] }
serde = { version = "1.0.228", features = ["derive"] }
