[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
models = { path = "../models" }
collector = { path = "../collector" }
parser = { path = "../parser" }
analyzer = { path = "../analyzer" }

clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
windows = { version = "0.58", features = ["Win32_Foundation"] }