[package]
name = "collector"
version = "0.1.0"
edition = "2024"

[dependencies]
models = { path = "../models" }
parser = { path = "../parser" }
windows = { version = "0.58", features = [
    "Win32_Foundation", 
    "Win32_System_ProcessStatus", 
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Storage_FileSystem"
] }
anyhow = "1.0"